--- a/demo-2/index.html
+++ b/demo-2/index.html
@@ -42,6 +42,7 @@
             opacity: 0,
             rotate:360,
             scrollTrigger:{
+                markers: true,
                 trigger:"#box2",
                 scroller:"body",
                 start:"top 60%",
@@ -52,6 +53,7 @@
         gsap.to(".sec-3 h1", {
             transform: "translateX(-160%)",
             scrollTrigger:{
+                markers:true,
                 trigger:".sec-3",
                 scroller:"body",
                 start:"top 0%",
