--- a/demo-3/index.html
+++ b/demo-3/index.html
@@ -14,33 +14,32 @@
 <body>
     <main>
         <div class="icon" id="string">
-            <svg width="1000" height="500">
-                <path d="M 10 100 Q 500 100 990 100" stroke-width="6px" stroke="red" fill="red" />
+            <svg width="1000" height="200">
+                <path d="M 10 100 Q 500 100 990 100" stroke-width="6px" stroke="red" fill="transparent" />
             </svg>
         </div>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js" integrity="sha512-P2IDYZfqSwjcSjX0BKeNhwRUH8zRPGlgcWl5n6gBLzdi4Y5/0O4zaXrtO4K9TZK6Hn1BenYpKowuCavNandERg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js" ></script>
    <script>
     var  inPath = "M 10 100 Q 500 100 990 100 "
     var  addPath = "M 10 100 Q 500 100 990 100 "
       var string = document.querySelector("#string")
-      string.addEventListener("mousemove" , function (deth){
-          var inPath = `M 10 100 Q 500 ${deth.y} 990 100`
+      string.addEventListener("mousemove" , function (event){
+          var inPath = `M 10 100 Q 500 ${event.y} 990 100`
 
           gsap.to(".icon svg path" ,{
             attr: {d:inPath},
             duration:1.3,
-            ease:"power3.out"
+            ease:"power4.out"
           } )
       })
-      string.addEventListener("mouseleave" , function (deth){
-          var inPath = `M 10 100 Q 500 ${deth.y} 990 100`
+      string.addEventListener("mouseleave" , function (){
 
           gsap.to(".icon svg path" ,{
             attr: {d:addPath},
             duration:1.5,
-            ease:"elastic,out(1,0.2)"
+            ease: "elastic.inOut(1.2,0.4)",
           } )
       })
     </script>
