--- a/demo-1/index.html
+++ b/demo-1/index.html
@@ -38,6 +38,7 @@
 
         for (let i = 1; i <= totalBoxes; i++) {
             tl.from(`#box${i}`, {
+                 transform: "translateX(100%)",
                 duration: 0.5,
                 scale: 0.1,
                 y: 500,
