--- a/demo-5/index.html
+++ b/demo-5/index.html
@@ -16,11 +16,18 @@
         <section>
             <div class="container demo-1">
                 <h1>Experien &nbsp; all</h1>
+
             </div>
         </section>
         <section>
             <div class="container demo-2">
-                <h1>National&nbsp;&nbsp; Aeronautics&nbsp;&nbsp; and &nbsp;&nbsp;Space&nbsp;&nbsp; Administration</h1>
+
+                <h1>Indian&nbsp;&nbsp;Space&nbsp;&nbsp; Research&nbsp;&nbsp; Organisation</h1>
+            </div>
+        </section>
+        <section>
+            <div class="container demo-2">
+                <h1>Jay&nbsp;&nbsp;Kalathiya</h1>
             </div>
         </section>
     </main>
@@ -43,14 +50,14 @@
             h1.innerHTML = cut
         }
         textAnimation()
-        gsap.from("h1 .a", {
+        gsap.from(".demo-1 h1 .a", {
             y: 50,
             duration: 0.6,
             delay: 0.5,
             opacity: 0,
             stagger: 0.15
         })
-        gsap.from("h1 .b", {
+        gsap.from(".demo-1 h1 .b", {
             y: 50,
             duration: 0.6,
             delay: 0.5,
@@ -59,7 +66,7 @@
         })
 
         function textAnimation2() {
-                const h1 = document.querySelector(".demo-2 h1");
+            document.querySelectorAll(".demo-2 h1").forEach(h1 => {
                 const h1text = h1.textContent;
                 const allText = h1text.split("");
                 let cut = "";
@@ -71,16 +78,15 @@
                     }
                 });
                 h1.innerHTML = cut;
-            }
+            });
+        }
+        textAnimation2();
 
-            textAnimation2();
-
-            gsap.registerPlugin(ScrollTrigger);
-
+        document.querySelectorAll(".demo-2").forEach((section) => {
             const tl = gsap.timeline({
                 scrollTrigger: {
                     markers: true,
-                    trigger: ".demo-2",
+                    trigger: section,
                     scroller: "body",
                     start: "top 0%",
                     end: "top -150%",
@@ -89,27 +95,26 @@
                 }
             });
 
-            // Animate out lowercase `.b` letters
-            tl.to(".demo-2 h1 .b", {
-                y: -40,
-                opacity: 0,
+            tl.to(section.querySelectorAll(".demo-2 h1 .a"), {
+                ease: "power2.out",
                 duration: 1,
-                ease: "power2.inOut",
-                onComplete: () => {
-                    document.querySelectorAll(".demo-2 h1 .b").forEach(el => {
-                        el.style.display = "none";
-                    });
-                },
-                stagger: 0.02,
-            }, 0);
-
-            // Animate in uppercase `.a` letters
-            tl.from(".demo-2 h1 .a", {
-                duration: 1,
-                ease: "back.out(1.7)",
                 stagger: 0.04
             }, 0.2);
 
+            tl.to(section.querySelectorAll(".demo-2 h1 .b"), {
+                y: -40,
+                opacity: 0,
+                width: 0,
+                margin: 0,
+                padding: 0,
+                ease: "power2.inOut",
+                duration: 1,
+                stagger: 0.02,
+                // onComplete: () => {
+                //     section.querySelectorAll("h1 .b").forEach(el => el.style.display = "none");
+                // }
+            }, 0);
+        });
 
     </script>
 
